# cmd/handlers/policies.go
@@ -1,7 +1,12 @@
 package handlers
 
 const (
-	UserPath = "/api/v1/users"
+	BasePath  = "/api/v1"
+	AuthPath  = "/api/v1/auth"
+	UserPath  = "/api/v1/users"
+	TablePath = "/api/v1/tables"
+	MenuPath  = "/api/v1/menus"
+	FoodPath  = "/api/v1/foods"
 
 	PolicyMethodGet    = "GET"
 	PolicyMethodPost   = "POST"
